--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     <div class="product CREAM">
       <img src="cream.png" width="226" height="370" alt="cream">
       <h3>CREAM</h3>
-      <p>Description of Product 1.</p>
+      <p>Beige color of this tote bag</p>
       <p>Price: 350 PESOS</p>
       <button class="btn" onclick="addToCart('CREAM', 350)">Add to Cart</button>
     </div>
     <div class="product BLACK">
       <img src="black.jpg" width="226" height="370" alt="black">
       <h3>BLACK</h3>
-      <p>Description of Product 2.</p>
+      <p>Black color of this tote bag</p>
       <p>Price: 350 PESOS</p>
       <button class="btn4" onclick="addToCart('BLACK', 350)">Add to Cart</button>
     </div>
     <div class="product MATCHA">
       <img src="matcha.jpg" width="226" height="370" alt="MATCHA">
       <h3>MATCHA</h3>
-      <p>Description of Product 3.</p>
+      <p>Black color of this tote bag</p>
       <p>Price: 350 PESOS</p>
       <button class="btn" onclick="addToCart('MATCHA', 350)">Add to Cart</button>
     </div>
